# langchain-agent-tool-excercise

./: .editorconfig  .gitignore  filled_data.json  pyproject.toml
agent_nulling_finder/: gpt_version.py  main.py  processor.py
